# flask-minimal-tagi

./: pyproject.toml  requirements.txt
app/: __init__.py  filters.py  routes.py
app/static/: style.css
app/templates/: article.html  base.html  index.html
