[tool.poetry]
name = "tagiminimal"
version = "0.1.0"
description = ""
authors = ["Fabio A. Camcihel <fabiocamichel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^5.2"
Flask = "^1.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
